# impress-apps

./: .gitignore  .mcp.json  .swiftlint.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  rust-analyzer.toml
apps/impel-tui/: Cargo.toml
apps/impel-tui/src/: app.rs  commands.rs  keybindings.rs  main.rs  mode.rs
apps/impel-tui/src/views/: event_view.rs  ground.rs  landscape.rs  mod.rs  program_view.rs  project_view.rs  thread_view.rs
apps/impel-tui/src/widgets/: alert_panel.rs  mod.rs  mode_indicator.rs
crates/ads-client/: Cargo.toml  README.md  pyproject.toml
crates/ads-client/src/: client.rs  error.rs  export.rs  lib.rs  libraries.rs  links.rs  mcp.rs  metrics.rs  network.rs  objects.rs  parse.rs  python.rs  query.rs  rate_limit.rs  references.rs  search.rs  types.rs
crates/im-bibtex/: Cargo.toml  README.md  pyproject.toml
crates/im-bibtex/src/: bdsk_file.rs  entry.rs  formatter.rs  journal_macros.rs  latex_decoder.rs  lib.rs  mcp.rs  parser.rs  python.rs  setup.rs
crates/im-identifiers/: Cargo.toml  README.md  pyproject.toml
crates/im-identifiers/src/: cite_key.rs  extractors.rs  lib.rs  mcp.rs  python.rs  resolver.rs  setup.rs  validators.rs
crates/imbib-core/: Cargo.toml  README.md  build-ios.sh  build-xcframework.sh  build.rs  uniffi.toml
crates/imbib-core/benches/: bibtex_benchmark.rs
crates/imbib-core/src/: conversions.rs  error.rs  filter.rs  input_mode.rs  lib.rs
crates/imbib-core/src/annotations/: mod.rs  operations.rs  storage.rs  types.rs
crates/imbib-core/src/automation/: mod.rs
crates/imbib-core/src/bibtex/: bdsk_file.rs  entry.rs  formatter.rs  journal_macros.rs  latex_decoder.rs  mod.rs  parser.rs
crates/imbib-core/src/deduplication/: mod.rs  normalization.rs  orchestration.rs  similarity.rs
crates/imbib-core/src/domain/: author.rs  collection.rs  enrichment.rs  identifiers.rs  library.rs  linked_file.rs  mod.rs  paper_stub.rs  publication.rs  search_result.rs  tag.rs  validation.rs
crates/imbib-core/src/export/: mod.rs
crates/imbib-core/src/filename/: mod.rs
crates/imbib-core/src/http/: mod.rs  native.rs
crates/imbib-core/src/identifiers/: cite_key.rs  cite_key_format.rs  extractors.rs  mod.rs  resolver.rs  validators.rs
crates/imbib-core/src/import/: mod.rs
crates/imbib-core/src/merge/: mod.rs
crates/imbib-core/tests/: bibtex_tests.rs  deduplication_tests.proptest-regressions  deduplication_tests.rs  identifier_tests.rs  ris_tests.rs  snapshot_tests.rs
crates/impart-core/: Cargo.toml  build-xcframework.sh  build.rs
crates/impart-core/src/: ffi.rs  ffi_types.rs  imap.rs  lib.rs  mbox.rs  mime.rs  schemas.rs  smtp.rs  threading.rs  types.rs  uniffi.udl  uniffi_bindgen.rs
crates/impel-core/: Cargo.toml
crates/impel-core/src/: config.rs  error.rs  lib.rs  program.rs  project.rs  schemas.rs  task_executor.rs  uniffi_bindgen.rs
crates/impel-helix/: Cargo.toml  build-xcframework.sh
crates/impel-helix/src/: command.rs  ffi.rs  key_handler.rs  keymap.rs  lib.rs  motion.rs  space.rs  state.rs  text_engine.rs
crates/impel-server/: Cargo.toml
crates/impel-server/src/: auth.rs  http.rs  lib.rs  main.rs  socket.rs  websocket.rs
crates/implore-core/: Cargo.toml  build-xcframework.sh
crates/implore-core/src/: automation.rs  axis.rs  camera.rs  colormap.rs  dataset.rs  error.rs  export.rs  input.rs  lib.rs  library.rs  render.rs  schemas.rs  session.rs  sync.rs  types.rs  uniffi_bindgen.rs  view.rs
crates/implore-io/: Cargo.toml
crates/implore-io/src/: csv_reader.rs  fits_reader.rs  hdf5_reader.rs  lib.rs  npz_reader.rs  parquet_reader.rs  reader.rs  schema.rs
crates/implore-selection/: Cargo.toml
crates/implore-selection/src/: ast.rs  eval.rs  lib.rs  parser.rs
crates/implore-stats/: Cargo.toml
crates/implore-stats/src/: ecdf.rs  fast_cdf.rs  lib.rs  pcdf.rs  summary.rs
crates/impress-bibtex/: Cargo.toml
crates/impress-bibtex/src/: bdsk_file.rs  entry.rs  formatter.rs  journal_macros.rs  latex_decoder.rs  lib.rs  main.rs  parser.rs  types.rs
crates/impress-collab/: Cargo.toml
crates/impress-collab/src/: invitation.rs  lib.rs  permissions.rs  presence.rs  viewport.rs
crates/impress-core/: Cargo.toml
crates/impress-core/src/: event.rs  item.rs  lib.rs  operation.rs  query.rs  reference.rs  registry.rs  schema.rs  sql_query.rs  sqlite_store.rs  store.rs
crates/impress-domain/: Cargo.toml
crates/impress-domain/src/: annotation.rs  author.rs  citation_reference.rs  collection.rs  enrichment.rs  figure.rs  identifiers.rs  lib.rs  library.rs  linked_file.rs  manuscript.rs  publication.rs  search_result.rs  tag.rs  validation.rs
crates/impress-flags/: Cargo.toml
crates/impress-flags/src/: config.rs  flag.rs  lib.rs  main.rs  parse.rs  query.rs
crates/impress-git/: Cargo.toml
crates/impress-git/src/: commands.rs  conflict.rs  gitignore.rs  lib.rs  models.rs  parse.rs
crates/impress-identifiers/: Cargo.toml
crates/impress-identifiers/src/: cite_key.rs  extractors.rs  lib.rs  main.rs  resolver.rs  types.rs  validators.rs
crates/impress-llm/: Cargo.toml  build-macos-only.sh  build-xcframework.sh  build.rs  uniffi.toml
crates/impress-llm/src/: lib.rs  provider.rs  types.rs  uniffi_bindgen.rs
crates/impress-mcp/: Cargo.toml
crates/impress-mcp/src/: main.rs  server.rs  store.rs  tools.rs
crates/impress-store-ffi/: Cargo.toml  build-xcframework.sh  build.rs
crates/impress-store-ffi/src/: lib.rs  uniffi_bindgen.rs
crates/impress-tags/: Cargo.toml
crates/impress-tags/src/: alias.rs  autocomplete.rs  config.rs  hierarchy.rs  lib.rs  main.rs  parse.rs  query.rs  tag.rs
crates/impress-toolbox/: Cargo.toml
crates/impress-toolbox/src/: discover.rs  execute.rs  git.rs  git_types.rs  main.rs  server.rs  types.rs
crates/imprint-core/: Cargo.toml  build-xcframework.sh  uniffi.toml
crates/imprint-core/src/: automation.rs  bibliography.rs  citation_lookup.rs  citations.rs  collaboration.rs  document.rs  latex.rs  lib.rs  migration.rs  note_import.rs  render.rs  render_project.rs  selection.rs  sourcemap.rs  transaction.rs
(+1497 files in other folders)
