[workspace]
resolver = "2"
members = [
    "crates/impress-domain",
    "crates/impress-bibtex",
    "crates/impress-identifiers",
    "crates/impress-collab",
    "crates/imprint-core",
    "crates/imbib-core",
    # impress-llm - extended LLM provider support via graniet/llm
    "crates/impress-llm",
    # implore - scientific data visualization
    "crates/implore-core",
    "crates/implore-stats",
    "crates/implore-io",
    "crates/implore-selection",
    # impel - agent orchestration for autonomous research
    "crates/impel-core",
    "crates/impress-helix",
    "apps/impel-tui",
    "crates/impel-server",
    # impart - research conversation platform
    "crates/impart-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yipihey/impress-apps"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Parsing
nom = "7.1"
regex = "1.10"
lazy_static = "1.4"

# UniFFI for FFI bindings (optional)
uniffi = { version = "0.28", features = ["cli"] }

# Internal workspace crates
impress-domain = { path = "crates/impress-domain" }
impress-bibtex = { path = "crates/impress-bibtex" }
impress-identifiers = { path = "crates/impress-identifiers" }
impress-collab = { path = "crates/impress-collab" }
imprint-core = { path = "crates/imprint-core" }
imbib-core = { path = "crates/imbib-core" }
impress-llm = { path = "crates/impress-llm" }

# implore crates
implore-core = { path = "crates/implore-core" }
implore-stats = { path = "crates/implore-stats" }
implore-io = { path = "crates/implore-io" }
implore-selection = { path = "crates/implore-selection" }

# Scientific data I/O (for implore)
hdf5 = "0.8"
fitsio = "0.21"
parquet = "53"
csv = "1.3"

# URL handling
url = "2"
urlencoding = "2"

# Parallel processing
rayon = "1.10"

# impel crates
impel-core = { path = "crates/impel-core" }
impress-helix = { path = "crates/impress-helix" }
impel-tui = { path = "apps/impel-tui" }
impel-server = { path = "crates/impel-server" }

# impel dependencies
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
mail-parser = "0.9"
petgraph = "0.6"
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
