[package]
name = "impel-tui"
description = "Terminal UI for impel agent orchestration - flight director console"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "impel"
path = "src/main.rs"

[dependencies]
# Core library
impel-core = { workspace = true }

# Helix modal editing
impress-helix = { workspace = true }

# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
