[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ads-client"
version = "0.1.0"
description = "Python client for the NASA ADS / SciX API — powered by Rust"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["ads", "nasa", "astronomy", "bibliography", "astrophysics", "scix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.maturin]
features = ["python"]
module-name = "ads_client"
manifest-path = "Cargo.toml"
