[package]
name = "im-bibtex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast BibTeX parser, formatter, and toolkit — parse, format, decode LaTeX, expand journal macros"
repository = "https://github.com/yipihey/im-bibtex"
keywords = ["bibtex", "bibliography", "latex", "parser", "citation"]
categories = ["parser-implementations", "text-processing", "command-line-utilities"]

[lib]
name = "im_bibtex"

[features]
default = []
cli = ["dep:clap", "dep:serde_json"]

[dependencies]
# Parsing
nom = "7.1"

# LaTeX/journal decoding
regex = "1.10"
lazy_static = "1.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

# Error handling
thiserror = "1.0"

# BibDesk file reference support
plist = "1.6"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"], optional = true }

[[bin]]
name = "im-bibtex"
path = "src/bin/im_bibtex.rs"
required-features = ["cli"]

[dev-dependencies]
serde_json = "1"
