[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "im-bibtex"
version = "0.2.0"
description = "Fast BibTeX parser, formatter, and toolkit — parse, format, decode LaTeX, expand journal macros. Powered by Rust."
requires-python = ">=3.8"
license = "MIT"
keywords = ["bibtex", "bibliography", "latex", "parser", "citation"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
]

[tool.maturin]
features = ["python"]
bindings = "pyo3"
