[package]
name = "impel-server"
description = "HTTP/WebSocket server for impel agent API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "impel-server"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = ["sqlite"]
binary = []
sqlite = []

[dependencies]
# Core library
impel-core = { workspace = true, features = ["sqlite"] }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# WebSocket support
tokio-tungstenite = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }
