[package]
name = "implore-selection"
description = "Selection grammar parser for implore - keyboard-driven data selection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
# Parsing
nom = { workspace = true }

# Serialization and error handling
serde = { workspace = true }
thiserror = { workspace = true }

# UniFFI for FFI bindings (optional)
uniffi = { workspace = true, optional = true }

[dev-dependencies]
