[package]
name = "impress-bibtex"
description = "BibTeX parsing and formatting for the impress suite — UniFFI bindings around im-bibtex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
im-bibtex = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true, optional = true }
