[package]
name = "impress-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified item protocol for the impress research suite"

[features]
default = []
sqlite = ["rusqlite"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
