[package]
name = "impress-identifiers"
description = "Identifier extraction and validation for the impress suite — UniFFI bindings around im-identifiers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
uniffi = ["dep:uniffi"]
native = ["dep:reqwest", "dep:tokio"]

[dependencies]
im-identifiers = { workspace = true }
serde = { workspace = true }
uniffi = { workspace = true, optional = true }

# For URL resolution (native only)
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
