[package]
name = "impress-mcp"
description = "MCP server for local impress suite search (publications, chunks, embeddings)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "impress-mcp"
path = "src/main.rs"

[dependencies]
imbib-core = { workspace = true, features = ["native", "embeddings"] }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
