[package]
name = "impress-tags"
description = "Hierarchical tag models, autocomplete, and query for impress apps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
native = ["uniffi"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
uniffi = { workspace = true, optional = true }

[dev-dependencies]
rstest = "0.18"
